// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComboButton 1`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton 2`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 hWFVnH ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 1`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 2`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 hWFVnH ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 3`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 jolcIP"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 4`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 jolcIP ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 hSbJhv ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 5`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 gSxLZq"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 6`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 gSxLZq ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 cPykUe ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 7`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 8`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 ebCIkw ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 gfpLJs ComboButtonstyles__RightButton-jzrgg8-2 fxdXsO"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 9`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 lgPlfP"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 10`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 lgPlfP ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 cQyviT ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 11`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 envJPA"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ design 12`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 envJPA ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 ePtogg ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 1`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 gfnTjB"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 2`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 gfnTjB ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dxiCgh ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 3`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dkSKWW"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 4`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dkSKWW ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 jxwgnS ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 5`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 6`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 hWFVnH ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 7`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 fdUCED"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 8`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 fdUCED ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 etazHX ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 9`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 kQnzHZ"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 10`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 kQnzHZ ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 fOQYmN ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 11`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 KJblR"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
    >
      Click Me
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ComboButton w/ size 12`] = `
<div
  class="ComboButtonstyles__Wrapper-jzrgg8-0 jOwEQG"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 KJblR ComboButtonstyles__LeftButton-jzrgg8-1 difRPs"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
    >
      Click Me
    </span>
  </button>
  <button
    class="Buttonstyles__Box-qfvnbt-0 eAQYNR ComboButtonstyles__RightButton-jzrgg8-2 erGBcM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 14.44l7.293-7.294 1.414 1.415-8 8a1 1 0 01-1.414 0l-8-8 1.414-1.415L12 14.44z"
        />
      </svg>
    </span>
  </button>
</div>
`;
